# lxtask

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  lxtask.desktop.in
data/: lxtask.1.in  lxtask.desktop.in
debian/: changelog  control  copyright  lxtask.menu  menu  rules  watch
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lg.po  lt.po  lv.po  lxtask-is.po  lxtask-ve.po  (+32 more)
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  functions.c  functions.h  interface.c  interface.h  main.c  types.h  utils.c  utils.h  xfce-taskmanager-linux.c  xfce-taskmanager-linux.h
